# hr-rag-assistant

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
app/: agent.py  build_knowledge_base.py  cache.py  config.py  embeddings.py  hybrid_search.py  main.py  models.py  monitoring.py  prompts.py  security.py  tools.py  vector_store.py
tests/: test_api.py  test_cache.py  test_security.py
